--- a/接口文档.md
+++ b/接口文档.md
@@ -801,7 +801,23 @@ low_location：
       "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
-      "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      },
+      {
+      "requestID":"xxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"曲延松",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"茗筑美嘉"，  //房子小区名
+      "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      },
+      {
+      "requestID":"xxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"曲延松",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"茗筑美嘉"，  //房子小区名
+      "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       },
     ]
   }
@@ -829,6 +845,7 @@ low_location：
   ```
   
   * #### 请求反馈获取(u)
+  这是用户获取与他相关的所有请求  和房主的不一样
  ```
   GET /tract/userGet
   ```
@@ -855,11 +872,35 @@ low_location：
         {
         "requestID":"xsxoo",
         "username":"xxdd"，   //请求的人的用户名
-        "name":"曲延松",       //请求的人的姓名
+        "name":"刘鹏昊",       //请求的人的姓名
         "house_hash":"adfafd",    //请求的房子hash
         "commu_name":"奥龙官邸"，  //房子小区名
         "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
         },
+        {
+      "requestID":"xsxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"王元军",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"奥龙官邸"，  //房子小区名
+      "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      },
+      {
+      "requestID":"xxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"黎明",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"茗筑美嘉"，  //房子小区名
+      "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      },
+      {
+      "requestID":"xxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"Jack",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"茗筑美嘉"，  //房子小区名
+      "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      },
     ]
    },
   }
