--- a/接口文档.md
+++ b/接口文档.md
@@ -325,12 +325,10 @@
   
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|要修改的房子的哈希|
+  |house_hash|string|要修改的房子的房产证号的哈希|
   |state|number|可租用状态 0 不可租用 1可租用|
   |elevator|boolean|有无电梯|
   |lease|3800|租金|
-  |phone|string|电话号码|
-  
   
   //不可添加图片
   
@@ -794,6 +792,7 @@ low_location：
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "res":''   //这是指的用户的回复    请注意 作为房主获取的时候 状态码为0时 这个res 是空的
       },
       {
       "requestID":"xsxoo",
@@ -802,6 +801,7 @@ low_location：
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
       "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "res":''   //这里指的用户的回复  请注意 作为房主获取的时候 状态码为0时 这个res 是空的
       },
       {
       "requestID":"xxoo",
@@ -824,7 +824,7 @@ low_location：
   }
   ```
 
-* #### 请假请求反馈(u)
+* #### 请求反馈(u)
  ```
   POST /tract/ownerRes
   ```
@@ -849,10 +849,7 @@ low_location：
  ```
   GET /tract/userGet
   ```
-  ```
-  例如：
-  GET /tract/userGet
-  ```
+
 
   #### response
   ```
