--- a/接口文档.md
+++ b/接口文档.md
@@ -777,6 +777,7 @@ low_location：
   GET /tract/ownerGet
   ```
 
+注意当请求状态码为2时候 返回的时候要加 res字段 值是 true或者false 表明用户是否输入支付密码了 等待签约 还是反悔了 不签了
 
   #### response
   ```
@@ -792,7 +793,7 @@ low_location：
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
-      "res":''   //这是指的用户的回复    请注意 作为房主获取的时候 状态码为0时 这个res 是空的
+   
       },
       {
       "requestID":"xsxoo",
@@ -801,7 +802,7 @@ low_location：
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
       "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
-      "res":''   //这里指的用户的回复  请注意 作为房主获取的时候 状态码为0时 这个res 是空的
+     
       },
       {
       "requestID":"xxoo",
@@ -810,6 +811,7 @@ low_location：
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "res":'true'   // 表示用户已经输入支付密码 等待房主签约了。  如果是false说明用户反悔了不想签约了
       },
       {
       "requestID":"xxoo",
@@ -834,7 +836,7 @@ low_location：
   |---|---|---|
   |requestID|string|请求id|
   |request_response|boolean|请求反馈 true 同意签约  false 不同意签约|
-  |pay_password|string|请求反馈 true 同意签约  false 不同意签约|
+  
 
   #### response
   ```
@@ -849,6 +851,8 @@ low_location：
  ```
   GET /tract/userGet
   ```
+
+注意 当状态码是 1 和 3的时候 需要加上 res 字段 表明卖家的反馈 是同意还是拒绝
 
 
   #### response
@@ -867,25 +871,18 @@ low_location：
         "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
         },
         {
-        "requestID":"xsxoo",
-        "username":"xxdd"，   //请求的人的用户名
-        "name":"刘鹏昊",       //请求的人的姓名
-        "house_hash":"adfafd",    //请求的房子hash
-        "commu_name":"奥龙官邸"，  //房子小区名
-        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
-        },
-        {
       "requestID":"xsxoo",
       "username":"xxdd"，   //请求的人的用户名
-      "name":"王元军",       //请求的人的姓名
+      "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
       "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "res":'true'   //true 表明卖家同意了请求  false 表明卖家未同意
       },
       {
       "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
-      "name":"黎明",       //请求的人的姓名
+      "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
@@ -893,10 +890,11 @@ low_location：
       {
       "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
-      "name":"Jack",       //请求的人的姓名
+      "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "res":"true"   //true表明卖家输入密码签约成功  false 表明卖家最后关头拒绝了 
       },
     ]
    },
