--- a/接口文档.md
+++ b/接口文档.md
@@ -141,12 +141,12 @@
     "myhouse":[
         {
             "commu_name":"奥龙官邸"，
-            "house_hash"："sdfaafadsfasd"
+            "house_id_hash"："sdfaafadsfasd"
         },
         
         {
             "commu_name":"茗筑美嘉"，
-            "house_hash"："sdfsdafsdfadf"
+            "house_id_hash"："sdfsdafsdfadf"
         },
         。。。
     ]
@@ -264,7 +264,7 @@
   
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|房子哈希|
+  |house_id_hash|string|房子房产证哈希|
 
  #### response
  ```
@@ -279,7 +279,7 @@
             “sdfadsfadsfasf”,
             "sadfadsfasfsa"
         ]
-      "house_hash":"sdfwenk31345",//房产证号
+      "house_id_hash":"sdfwenk31345",//房产证号
       "owner_id":"37012506546564"，//房主身份证号
       "verify":"true"   //经过验证
       "owner":"quyanso111",//拥有者的账号
@@ -325,7 +325,7 @@
   
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|要修改的房子的房产证号的哈希|
+  |house_id_hash|string|要修改的房子的房产证号的哈希|
   |state|number|可租用状态 0 不可租用 1可租用|
   |elevator|boolean|有无电梯|
   |lease|3800|租金|
@@ -357,7 +357,7 @@ house：
 |key|type|Description|
 |---|---|---|
 |house_id|string|房产证号|
-|house_hash|string|房产证号hash|
+|house_id_hash|string|房产证号hash|
 |owner_id|string|拥有者的身份证号|
 |owner_name|string|拥有者的姓名|
 |owner|string|拥有者的账号|
@@ -373,7 +373,6 @@ house：
 |lease_type|number| 0 全部 1 整租 2 合租 |
 |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
 |house_owner_credit|number| 房主信誉值  eg: 16 |
-|house_level|number|1~5 五个级别 |
 |house_comment|array| 房子评论  |
 |verify|boolean| 是否经过验证，true 通过了 false没通过  |
 |lon|string| 经度  eg "113.45"  |
@@ -426,7 +425,7 @@ low_location：
             “sdfadsfadsfasf”,
             "sadfadsfasfsa"
         ]
-      "house_hash":"sdfwenk31345",//房产证号
+      "house_id_hash":"sdfwenk31345",//房产证号
       "owner_id":"37012506546564"，//房主身份证号
       "verify":"true"   //经过验证
       "owner":"quyanso111",//拥有者的账号
@@ -448,7 +447,6 @@ low_location：
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
       "house_owner_credit":16,
-      "house_level":5 //房子五个等级
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
@@ -475,7 +473,7 @@ low_location：
   ##### parameters
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|房产证号|
+  |house_id_hash|string|房产证号|
   ##### <a name="get-group-response">response</a>
   **注：**
 
@@ -489,7 +487,7 @@ low_location：
             “sdfadsfadsfasf”,
             "sadfadsfasfsa"
         ]
-      "house_hash":"sdfwenk31345",//房产证号
+      "house_id_hash":"sdfwenk31345",//房产证号
       "owner_id":"37012506546564"，//房主身份证号
       "verify":"true"   //经过验证
       "owner":"quyanso111",//拥有者的账号
@@ -512,7 +510,6 @@ low_location：
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
       "house_owner_credit":16,
-      "house_level":5 //房子五个等级
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
@@ -557,7 +554,7 @@ low_location：
           "house_type":"2",
           "lease_type":"1",
           "elevator":true,
-          "house_hash":"sdfadfafsaf"   //房子房产证的哈希
+          "house_id_hash":"sdfadfafsaf"   //房子房产证的哈希
         }，
         ...
     ]
@@ -571,7 +568,7 @@ low_location：
   ##### input
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|房子房产证hash|
+  |owner|string|房主的账号|
    #### response
   ```
   {
@@ -591,8 +588,7 @@ low_location：
   ##### input
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|房子房产证hash|
-  |house_level|number|1~5 五个级别|
+  |house_id_hash|string|房子房产证hash|
   |comment_word|string|文字评价|
   |comment_pic|file|图片评价|
    #### response
@@ -688,7 +684,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
          
          {
@@ -697,7 +693,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
          
          {
@@ -706,7 +702,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
          
         ],
@@ -719,7 +715,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
          
          {
@@ -728,7 +724,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
          
          {
@@ -737,7 +733,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_hash":"asdfsdf",
+          "house_id_hash":"asdfsdf",
          }，
         ],
   }
@@ -757,7 +753,7 @@ low_location：
 
   |Name|Type|Description|
   |---|---|---|
-  |house_hash|string|房产证的哈希|
+  |house_id_hash|string|房产证的哈希|
   |owner|string|房主账号|
   
   ##### response
@@ -787,37 +783,33 @@ low_location：
   "data":{
     tract:[
       {
-      "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
    
       },
       {
-      "requestID":"xsxoo",
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
       "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
      
       },
       {
-      "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       "res":'true'   // 表示用户已经输入支付密码 等待房主签约了。  如果是false说明用户反悔了不想签约了
       },
       {
-      "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       },
@@ -834,7 +826,7 @@ low_location：
 
   |Name|Type|Description|
   |---|---|---|
-  |requestID|string|请求id|
+  |username|string|房客的用户名|
   |request_response|boolean|请求反馈 true 同意签约  false 不同意签约|
   
 
@@ -863,35 +855,31 @@ low_location：
   "data":{
       tract:[
         {
-        "requestID":"xxoo",
-        "username":"xxdd"，   //请求的人的用户名
+        "ownername":"xxdd"，   //请求房主的名字
         "name":"曲延松",       //请求的人的姓名
-        "house_hash":"adfafd",    //请求的房子hash
+        "house_id_hash":"adfafd",    //请求的房子hash
         "commu_name":"茗筑美嘉"，  //房子小区名
         "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
         },
         {
-      "requestID":"xsxoo",
-      "username":"xxdd"，   //请求的人的用户名
+      "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
       "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       "res":'true'   //true 表明卖家同意了请求  false 表明卖家未同意
       },
       {
-      "requestID":"xxoo",
-      "username":"xxdd"，   //请求的人的用户名
+      "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       },
       {
-      "requestID":"xxoo",
-      "username":"xxdd"，   //请求的人的用户名
+      "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
-      "house_hash":"adfafd",    //请求的房子hash
+      "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
       "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       "res":"true"   //true表明卖家输入密码签约成功  false 表明卖家最后关头拒绝了 
@@ -909,21 +897,10 @@ low_location：
 
   |Name|Type|Description|
   |---|---|---|
-  |requestID|string|请求id|
+  |ownername|string|房主的用户名|
   |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
-  |pay_password|string|用户的支付密码|
   
-* #### 用户确认交易(u)
- ```
-  POST /tract/userIden
-  ```
-  ##### params
 
-  |Name|Type|Description|
-  |---|---|---|
-  |requestID|string|请求id|
-  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
-  |pay_password|string|用户的支付密码|
   
   
 * #### 卖家确认交易(u)
@@ -934,10 +911,19 @@ low_location：
 
   |Name|Type|Description|
   |---|---|---|
-  |requestID|string|请求id|
+  |username|string|这个交易的房客的用户名|
   |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
-  |pay_password|string|用户的支付密码|
 
+ 
+ * #### 支付密码的输入(u)
+ ```
+  POST /tract/payPass
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |payPass|string|支付密码|
 
   
   
