--- a/接口文档.md
+++ b/接口文档.md
@@ -898,7 +898,7 @@ low_location：
   |Name|Type|Description|
   |---|---|---|
   |ownername|string|房主的用户名|
-  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |requestIdentify|boolean|请求反馈 true 同意确认结束  false 不同意确认结束|
   
 
   
@@ -912,7 +912,7 @@ low_location：
   |Name|Type|Description|
   |---|---|---|
   |username|string|这个交易的房客的用户名|
-  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |requestIdentify|boolean|请求反馈 true 同意确认结束  false 不同意确认结束|
 
  
  * #### 支付密码的输入(u)
