--- a/接口文档.md
+++ b/接口文档.md
@@ -925,6 +925,44 @@ low_location：
   |---|---|---|
   |payPass|string|支付密码|
 
+
+  * #### 管理员获取所有冲突的合约进行仲裁(m)
+ 
+ ```
+  GET /tract/managerGet
+  ```
+
+
+
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+      tract:[
+        {
+        "ownername":"xxdd"，   //请求房主的名字
+        "owner":"曲延松",       //请求的房主的姓名
+        "username":"xxasfddd"，   //请求房客的名字
+        "user":"刘鹏昊",       //请求的房客的的姓名
+        "house_id_hash":"adfafd",    //请求的房子房产证的hash
+        "commu_name":"茗筑美嘉"，  //房子小区名
+        },
+      
+      {
+        "ownername":"sdfadfsa"，   //请求房主的名字
+        "owner":"郭松岳",       //请求的房主的姓名
+        "username":"xxasfddd"，   //请求房客的名字
+        "user":"王亚平",       //请求的房客的的姓名
+        "house_id_hash":"sfd",    //请求的房子房产证的hash
+        "commu_name":"江南水城"，  //房子小区名
+        },
+   
+    ]
+   },
+  }
+  ```
   
   
   
