--- a/接口文档.md
+++ b/接口文档.md
@@ -964,6 +964,18 @@ low_location：
   }
   ```
   
+  * #### 冲突仲裁返回(m)
+ ```
+  POST /tract/managerRes
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |username|string|房客的用户名|
+  |ownername|string|房主的用户名|
+  |request_response|number|请求反馈 1 房主违约  2 房客违约 |
+  
   
   
 
