--- a/接口文档.md
+++ b/接口文档.md
@@ -292,6 +292,7 @@
           "sector":"历下区",
           "commu_name":"奥龙官邸",
       },
+      "area":180   //房屋面积
       "low_str_location":"山东省济南市历下区奥龙官邸",
       "specific_location":"2号楼3单元1801",
       "floor":18
