--- a/接口文档.md
+++ b/接口文档.md
@@ -773,8 +773,8 @@ low_location：
  ```
   GET /tract/ownerGet
   ```
-
-注意当请求状态码为2时候 返回的时候要加 res字段 值是 true或者false 表明用户是否输入支付密码了 等待签约 还是反悔了 不签了
+注意  tract_statue有七个状态
+//  submit 提交中 effect 生效中 refused 被拒绝 finish 已完成 fail 失败  ownerIden 房主确认了房客未确认，userIden 房客确认房主没确认 
 
   #### response
   ```
@@ -788,7 +788,7 @@ low_location：
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
-      "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "tract_status":'submit'    
    
       },
       {
@@ -796,7 +796,7 @@ low_location：
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
-      "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "tract_status":'effect'
      
       },
       {
@@ -804,15 +804,15 @@ low_location：
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
-      "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
-      "res":'true'   // 表示用户已经输入支付密码 等待房主签约了。  如果是false说明用户反悔了不想签约了
+      "tract_status":'ownerIden' 
+
       },
       {
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
-      "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "tract_status":'finish'
       },
     ]
   }
@@ -845,7 +845,8 @@ low_location：
   GET /tract/userGet
   ```
 
-注意 当状态码是 1 和 3的时候 需要加上 res 字段 表明卖家的反馈 是同意还是拒绝
+注意  tract_statue有七个状态
+//  submit 提交中 effect 生效中 refused 被拒绝 finish 已完成 fail 失败  ownerIden 房主确认了房客未确认，userIden 房客确认房主没确认 
 
 
   #### response
@@ -860,30 +861,30 @@ low_location：
         "name":"曲延松",       //请求的人的姓名
         "house_id_hash":"adfafd",    //请求的房子hash
         "commu_name":"茗筑美嘉"，  //房子小区名
-        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+        "tract_status":'submit'    
         },
         {
       "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
-      "state":1    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
-      "res":'true'   //true 表明卖家同意了请求  false 表明卖家未同意
+      "tract_status":'effect'  
+
       },
       {
       "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
-      "state":2    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+      "tract_status":'finish'  
       },
       {
       "ownername":"xxdd"，   //请求房主的名字
       "name":"曲延松",       //请求的人的姓名
       "house_id_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
-      "state":3    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
-      "res":"true"   //true表明卖家输入密码签约成功  false 表明卖家最后关头拒绝了 
+      "tract_status":'ownerIden'   
+   
       },
     ]
    },
