--- a/接口文档.md
+++ b/接口文档.md
@@ -258,9 +258,9 @@
 
 
   ```
-  POST /user/myhouse
+  GET /user/myhouse
   ```
-   ##### input
+   ##### params
   
   |Name|Type|Description|
   |---|---|---|
@@ -395,7 +395,7 @@ low_location：
 
 * #### 添加房源(u)
   ```
-  POST /house/setUpHouse
+  GET /house/setUpHouse
   ```
   ##### parameters
   |Name|Type|Description|
@@ -469,9 +469,9 @@ low_location：
 
 * #### 获取房源详细信息(u|m)
   ```
-  POST /house/speinfo
+  GET /house/speinfo
   ```
-  ##### input
+  ##### parameters
   |Name|Type|Description|
   |---|---|---|
   |house_id_hash|string|房产证号|
