--- a/接口文档.md
+++ b/接口文档.md
@@ -412,6 +412,7 @@ low_location：
   |lon|string| 经度  eg "113.45"  |
   |lat|string| 纬度  eg "184.45"  |
   |area|string|房屋面积  eg: '356'  |
+  |accessory|string|'空调，洗衣机，两张床'|
   |house_pic|file| 一系列图片|
   ##### <a name="get-group-response">response</a>
   **注：**
