--- a/接口文档.md
+++ b/接口文档.md
@@ -300,6 +300,7 @@
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
       "house_owner_credit":16,       //房主的信誉
+      'accessory':'微波炉，冰箱，大床' //房屋配套
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
@@ -512,6 +513,7 @@ low_location：
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
       "house_owner_credit":16,
+      'accessory':'微波炉，冰箱，大床',//房屋配套
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
