--- a/接口文档.md
+++ b/接口文档.md
@@ -543,13 +543,15 @@ low_location：
   |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
   |lease_type|number| 0 全部 1 整租 2 合租 |
   |elevator|boolean| false 全部 true 有电梯  |
+  |page|number| eg 0 1 2 3 4  |
 
    #### response
   ```
   {
   "status":200,
   "message":"success",
-  "data":[
+  "data":{
+      houseList:[
         {
           "house_pic":"sadfadsfadf"   //一张图片的hash
        
@@ -561,7 +563,11 @@ low_location：
           "house_id_hash":"sdfadfafsaf"   //房子房产证的哈希
         }，
         ...
-    ]
+    ],
+    
+    page:3,
+      
+    }
   }
   ```
   
