--- a/接口文档.md
+++ b/接口文档.md
@@ -1025,5 +1025,15 @@ low_location：
   ```
   
 
+  * #### 人脸验证(u)
+  ```
+  POST /user/check
+  ```
+  ##### input
+  |Name|Type|Description|
+  |---|---|---|
+  |face|file|实时人像图片|
+  
+
   
 
